[project]
name = "debate-or-vote"
version = "0.1.0"
description = "Multi-agent debate framework for GSM8K"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "accelerate",
    "datasets",
    "matplotlib",
    "numpy",
    "pandas",
    "peft",
    "rouge-score",
    "scikit-learn",
    "scipy",
    "sentence-transformers",
    "sentencepiece",
    "torch",
    "torchaudio",
    "torchvision",
    "tqdm",
    "transformers",
    "trl"
]