[project]
name = "multi_agent_social_influence"
version = "0.1.0"
description = "Multi-agent debate framework"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "accelerate",
    "datasets",
    "matplotlib",
    "numpy",
    "pandas",
    "peft",
    "rouge-score",
    "scikit-learn",
    "scipy",
    "sentence-transformers",
    "sentencepiece",
    "torch",
    "torchaudio",
    "torchvision",
    "tqdm",
    "transformers",
    "trl",
    "wandb",
    "seaborn"
]